minio/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-operator
spec:
  ingressClassName: nginx
  rules:
  - host: minio.cx.one.pl
    http:
      paths:
      - backend:
          service:
            name:  console
            port:
              number: 9090
        path: /
        pathType: Exact
status:
  loadBalancer: {}
